--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
